Fix overflow of ListTable

--- a/src/containers/ListTable/ListTable.css
+++ b/src/containers/ListTable/ListTable.css
@@ -7,6 +7,7 @@
   border: 1px solid rgb(220, 224, 218);
   padding:5px;
   text-align: center;
+  overflow-x: scroll;
 }
 
 td {
